fixed user list alignment

--- a/frontend/web/styles/components/_list-item.scss
+++ b/frontend/web/styles/components/_list-item.scss
@@ -24,6 +24,11 @@
   &-sm {
     min-height: 60px;
   }
+  a:hover svg {
+    path {
+      fill: $primary;
+    }
+  }
 }
 
 .dark {
